file-server/root_deployment+svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: openresty/openresty
        ports:
        - containerPort: 80
        volumeMounts:
          - name: data
            mountPath: "/usr/share/nginx/html"
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: local-storage-pvc-test
        - name: nginx-config
          configMap:
            name: nginx-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
