file-server/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: api.faang.org
      http:
        paths:
        - path: /files
          backend:
            serviceName: nginx-svc
            servicePort: 80
